Name: dhall-nix
Version: 1.1.24
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Dhall-Nix-Library/issues
Synopsis: Dhall to Nix compiler
Description:
  Use this package if you want to compile Dhall expressions to the Nix language.
  You can use this package as a library or an executable:
  .
  * See the "Dhall.Nix" module if you want to use this package as a library
  .
  * Use the @dhall-to-nix@ program from this package if you want an executable
  .
  The "Dhall.Nix" module also contains instructions for how to use this package
Category: Compiler
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Dhall-Nix-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                      >= 4.11.0.0 && < 5   ,
        containers                               < 0.7 ,
        data-fix                                 < 0.4 ,
        dhall                     >= 1.41     && < 1.42,
        hnix                      >= 0.7      && < 0.15,
        lens-family-core          >= 1.0.0    && < 2.2 ,
        neat-interpolation                       < 0.6 ,
        text                      >= 0.8.0.0  && < 2.1
    Exposed-Modules:
        Dhall.Nix
    GHC-Options: -Wall
    Default-Language: Haskell2010
    if os(windows)
        Buildable: False
        
Executable dhall-to-nix
    if os(windows)
        Buildable: False
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Other-Modules:
        Paths_dhall_nix
    Build-Depends:
        base                                ,
        dhall                               ,
        dhall-nix                           ,
        hnix                                ,
        optparse-generic >= 1.1.1   && < 1.5,
        text
    GHC-Options: -Wall
    Default-Language: Haskell2010
    if os(windows)
        Buildable: False
