cabal-version:  >=1.10
name:           dhall-openapi
version:        0.1.2
category:       Code Generation
homepage:       https://github.com/dhall-lang/dhall-haskell
author:         Fabrizio Ferrai
maintainer:     fabrizio@ferrai.io
copyright:      2019 Fabrizio Ferrai
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-openapi

executable openapi-to-dhall
  main-is: Main.hs
  hs-source-dirs:
      openapi-to-dhall
  default-extensions: DuplicateRecordFields GeneralizedNewtypeDeriving LambdaCase RecordWildCards ScopedTypeVariables OverloadedStrings FlexibleInstances ConstraintKinds ApplicativeDo TupleSections
  ghc-options: -Wall
  build-depends:
    base                                           ,
    aeson                                          ,
    containers                                     ,
    directory               >= 1.3.0.0   && < 1.4  ,
    dhall                                          ,
    dhall-openapi                                  ,
    filepath                >= 1.4       && < 1.5  ,
    megaparsec              >= 7.0       && < 9.1  ,
    optparse-applicative    >= 0.14.3.0  && < 0.17 ,
    parser-combinators                             , 
    prettyprinter                                  ,
    sort                                           ,
    text                                           ,
    vector
  default-language: Haskell2010

library
  exposed-Modules:
      Dhall.Kubernetes.Convert
      Dhall.Kubernetes.Data
      Dhall.Kubernetes.Types
  hs-source-dirs:
      src
  default-extensions: DeriveDataTypeable DeriveGeneric DerivingStrategies DuplicateRecordFields GeneralizedNewtypeDeriving LambdaCase RecordWildCards ScopedTypeVariables OverloadedStrings FlexibleInstances ConstraintKinds ApplicativeDo TupleSections
  ghc-options: -Wall
  build-depends:
    base                    >= 4.11.0.0  && < 5    ,
    aeson                   >= 1.0.0.0   && < 1.6  ,
    containers              >= 0.5.8.0   && < 0.7  ,
    dhall                   >= 1.35.0    && < 1.38 ,
    prettyprinter           >= 1.7.0     && < 1.8  ,
    sort                    >= 1.0       && < 1.1  ,
    text                    >= 0.11.1.0  && < 1.3  ,
    vector                  >= 0.11.0.0  && < 0.13
  default-language: Haskell2010
