Cabal-Version:  >=1.11
Name:           dhall-openapi
Version:        1.0.4
Homepage:       https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-openapi#dhall-openapi
Author:         Fabrizio Ferrai
Maintainer:     Gabriel439@gmail.com
Copyright:      2019 Fabrizio Ferrai
License:        BSD3
License-File:   LICENSE
Build-Type:     Simple
Category:       Compiler
Synopsis:       Convert an OpenAPI specification to a Dhall package
Description:
    This package provides an `openapi-to-dhall` program that converts an
    OpenAPI specification to a Dhall package containing types, defaults, and
    schemas for that API.

Source-Repository head
  Type: git
  Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-openapi

Executable openapi-to-dhall
  Main-Is: Main.hs
  Hs-Source-Dirs:
      openapi-to-dhall
  Default-Extensions:
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards
    ScopedTypeVariables
    OverloadedStrings
    FlexibleInstances
    ConstraintKinds
    ApplicativeDo
    TupleSections
  Ghc-Options: -Wall
  Build-Depends:
    base                                           ,
    aeson                                          ,
    containers                                     ,
    directory               >= 1.3.0.0   && < 1.4  ,
    dhall                                          ,
    dhall-openapi                                  ,
    filepath                >= 1.4       && < 1.5  ,
    -- megaparsec follows SemVer: https://github.com/mrkkrp/megaparsec/issues/469#issuecomment-927918469
    megaparsec              >= 7.0       && < 10   ,
    optparse-applicative    >= 0.14.3.0  && < 0.18 ,
    parser-combinators                             , 
    prettyprinter                                  ,
    sort                                           ,
    text                                           ,
    vector
  Default-Language: Haskell2010

Library
  Exposed-Modules:
      Dhall.Kubernetes.Convert
      Dhall.Kubernetes.Data
      Dhall.Kubernetes.Types
  Hs-Source-Dirs:
      src
  Default-Extensions:
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    GeneralizedNewtypeDeriving
    LambdaCase
    RecordWildCards
    ScopedTypeVariables
    OverloadedStrings
    FlexibleInstances
    ConstraintKinds
    ApplicativeDo
    TupleSections
  Ghc-Options: -Wall
  Build-Depends:
    base                    >= 4.11.0.0  && < 5    ,
    aeson                   >= 1.0.0.0   && < 2.1  ,
    containers              >= 0.5.8.0   && < 0.7  ,
    dhall                   >= 1.38.0    && < 1.42 ,
    prettyprinter           >= 1.7.0     && < 1.8  ,
    scientific              >= 0.3.0.0   && < 0.4  ,
    sort                    >= 1.0       && < 1.1  ,
    text                    >= 0.11.1.0  && < 2.1  ,
    vector                  >= 0.11.0.0  && < 0.13
  Default-Language: Haskell2010
