cabal-version: 2.4
name: dhall-test-server
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    Dhall.Test.Server
  build-depends:
      async >= 2.2 && < 2.3
    , base >= 4.11 && < 5
    , bytestring >= 0.10 && < 0.13
    , http-types >= 0.12 && < 0.13
    , directory >= 1.3 && < 1.4
    , text >= 1.2 && < 2.2
    , wai >= 3.2 && < 3.3
    , warp >= 3.3 && < 3.5
    , warp-tls >= 3.3 && < 3.5
  default-language: Haskell2010
