Name: dhall-text
Version: 1.0.17
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.10.3, GHC == 8.4.3, GHC == 8.6.1
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Template text using Dhall
Description:
    This package provides a @dhall-to-text@ executable that templates text using
    the Dhall configuration language
Category: Compiler
Extra-Source-Files:
    README.md
Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-text

Executable dhall-to-text
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Build-Depends:
        base                 >= 4.8.0.0  && < 5   ,
        dhall                >= 1.15.0   && < 1.24,
        optparse-applicative                < 0.15,
        text                 >= 0.11.1.0 && < 1.3
    GHC-Options: -Wall
    Other-Modules:
        Paths_dhall_text
