Name:               dhall-toml
Version:            1.0.2
Cabal-Version:      >=1.10
Build-Type:         Simple
License:            BSD3
License-File:       LICENSE
Copyright:          2021 ear7h
Author:             ear7h
Maintainer:         Gabriel439@gmail.com
Bug-Reports:        https://github.com/dhall-lang/dhall-haskell/issues
Synopsis:           Convert between Dhall and TOML
Description:
    Use this package if you want to convert between dhall expressions and TOML.
    You can use this package as a library or an executable:
    .
    * See "Dhall.DhallToToml" or "Dhall.TomlToDhall" modules if you want to use this
      package as a library
    * Use @dhall-to-toml@, @toml-to-dhall@ programs from this package if you
      want an executable.
    .
    The "Dhall.DhallToToml" and "Dhall.TomlToDhall" modules also contains instructions
    for how to use this package
Category:           Compiler
Extra-Source-Files:
    README.md
    CHANGELOG.md
    tasty/data/*.dhall
    tasty/data/*.toml

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-toml

Library
    Hs-Source-Dirs:   src
    Build-Depends:
        base                 >= 4.12     && < 5    ,
        dhall                >= 1.39.0   && < 1.42 ,
        tomland              >= 1.3.2.0  && < 1.4  ,
        text                 >= 0.11.1.0 && < 2.1  ,
        containers           >= 0.5.9    && < 0.7  ,
        unordered-containers >= 0.2      && < 0.3  ,
        prettyprinter        >= 1.7.0    && < 1.8  ,
        optparse-applicative >= 0.14     && < 0.18
    Exposed-Modules:
        Dhall.DhallToToml
        Dhall.TomlToDhall
        Dhall.Toml.Utils
    Other-Modules:
        Paths_dhall_toml
    GHC-Options:      -Wall
    Default-Language: Haskell2010

Executable dhall-to-toml
    Hs-Source-Dirs:   dhall-to-toml
    Main-Is:          Main.hs
    Build-Depends:
        base       ,
        dhall-toml
    GHC-Options:      -Wall
    Default-Language: Haskell2010

Executable toml-to-dhall
    Hs-Source-Dirs:   toml-to-dhall
    Main-Is:          Main.hs
    Build-Depends:
        base       ,
        dhall-toml
    GHC-Options:      -Wall
    Default-Language: Haskell2010

Test-Suite dhall-toml-test
    Type:             exitcode-stdio-1.0
    Hs-Source-Dirs:   tasty
    Main-Is:          Main.hs
    Build-Depends:
        base               ,
        dhall              ,
        dhall-toml         ,
        tasty       <  1.5 ,
        tasty-hunit >= 0.2 ,
        text               ,
        tomland
    GHC-Options:      -Wall
    Default-Language: Haskell2010

Test-Suite doctest
    Type:             exitcode-stdio-1.0
    Hs-Source-Dirs:   doctest
    Main-Is:          Main.hs
    Build-Depends:
        base      ,
        directory ,
        filepath  ,
        doctest
    GHC-Options:      -Wall
    Default-Language: Haskell2010
