name:                dhall-try
version:             1.0.0
synopsis:            Try Dhall in a browser
-- description:
homepage:            https://github.com/dhall-lang/dhall-haskell
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2018 Gabriel Gonzalez
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable dhall-try
  main-is:             Main.hs
  build-depends:       base       >= 4.11.0.0 && < 5
                     , dhall
                     , prettyprinter
                     , text
                     , ghcjs-base >= 0.2.0.0  && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
  cpp-options: -DGHCJS_BROWSER
