name:                dhall-try
version:             1.0.0
synopsis:            Try Dhall in a browser
-- description:
homepage:            https://github.com/dhall-lang/dhall-haskell
license:             BSD3
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
copyright:           2018 Gabriel Gonzalez
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable dhall-try
  main-is:             Main.hs
  build-depends:       base           >= 4.11.0.0 && < 5
                     , aeson-pretty   >= 0.8.7    && < 0.9
                     , dhall          >= 1.19.0   && < 1.22
                     , dhall-json     >= 1.2.5    && < 1.3
                     , prettyprinter  >= 1.2.1    && < 1.3
                     , text           >= 1.2.3.0  && < 1.3
                     , ghcjs-base     >= 0.2.0.0  && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -dedupe
  cpp-options: -DGHCJS_BROWSER
