Name: dhall-yaml
Version: 1.6.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.10.3, GHC == 8.4.3, GHC == 8.6.1
License: GPL-3
License-File: LICENSE
Copyright: 2019 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Convert between Dhall and YAML
Description:
    Use this package if you want to convert between Dhall expressions and YAML.
    You can use this package as a library or an executable:
    .
    * See the "Dhall.YAML" module if you want to use this package as a library
    .
    * Use the @dhall-to-yaml-ng@ program from this package if you want an executable
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    README.md

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-yaml

Library
    Hs-Source-Dirs: src
    Build-Depends:
        HsYAML                    >= 0.2 && < 0.3,
        HsYAML-aeson              >= 0.2 && < 0.3,
        base                      >= 4.8.0.0  && < 5   ,
        aeson                     >= 1.0.0.0  && < 1.5 ,
        -- aeson-pretty                             < 0.9 ,
        bytestring                               < 0.11,
        -- containers                                     ,
        dhall                     >= 1.27.0   && < 1.28,
        dhall-json                                     ,
        -- exceptions                >= 0.8.3    && < 0.11,
        -- filepath                                 < 1.5 ,
        optparse-applicative      >= 0.14.0.0 && < 0.16,
        -- prettyprinter             >= 1.2.0.1  && < 1.4 ,
        -- scientific                >= 0.3.0.0  && < 0.4 ,
        text                      >= 0.11.1.0 && < 1.3 ,
        -- unordered-containers                     < 0.3 ,
        vector
    Exposed-Modules:
        Dhall.YAML
        Dhall.YAMLToDhall
    GHC-Options: -Wall

Executable dhall-to-yaml-ng
    Hs-Source-Dirs: dhall-to-yaml-ng
    Main-Is: Main.hs
    Build-Depends:
        base                                   ,
        aeson                                  ,
        bytestring                       < 0.11,
        dhall                                  ,
        dhall-json                             ,
        dhall-yaml                             ,
        optparse-applicative                   ,
        text
    Other-Modules:
        Paths_dhall_yaml
    GHC-Options: -Wall

Executable yaml-to-dhall
    Hs-Source-Dirs: yaml-to-dhall
    Main-Is: Main.hs
    Build-Depends:
        base                                             ,
        aeson                                            ,
        ansi-terminal               >= 0.6.3.1  && < 0.11,
        bytestring                                 < 0.11,
        dhall                                            ,
        dhall-json                                       ,
        dhall-yaml                                       ,
        exceptions                  >= 0.8.3    && < 0.11,
        optparse-applicative                             ,
        prettyprinter                                    ,
        prettyprinter-ansi-terminal >= 1.1.1    && < 1.2 ,
        text                                       < 1.3
    if !impl(ghc >= 8.0) && !impl(eta >= 0.8.4)
      Build-Depends: semigroups == 0.18.*
    Other-Modules:
        Paths_dhall_yaml
    GHC-Options: -Wall
