Name: dhall-yaml
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.10.3, GHC == 8.4.3, GHC == 8.6.1
License: GPL-3
License-File: LICENSE
Copyright: 2019 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/dhall-lang/dhall-haskell/issues
Synopsis: Convert between Dhall and YAML
Description:
    Use this package if you want to convert between Dhall expressions and YAML.
    You can use this package as a library or an executable:
    .
    * See the "Dhall.Yaml" module if you want to use this package as a library
    .
    * Use the @dhall-to-yaml-ng@ program from this package if you want an executable
Category: Compiler
Extra-Source-Files:
    CHANGELOG.md
    README.md
    tasty/data/*.dhall
    tasty/data/*.yaml
    tasty/data/*.txt

Source-Repository head
    Type: git
    Location: https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-yaml

Library
    Hs-Source-Dirs: src
    Build-Depends:
        HsYAML                    >= 0.2      && < 0.3 ,
        HsYAML-aeson              >= 0.2      && < 0.3 ,
        base                      >= 4.8.0.0  && < 5   ,
        aeson                     >= 1.0.0.0  && < 1.5 ,
        bytestring                               < 0.11,
        dhall                     >= 1.28.0   && < 1.29,
        dhall-json                >= 1.6.0    && < 1.7 ,
        optparse-applicative      >= 0.14.0.0 && < 0.16,
        text                      >= 0.11.1.0 && < 1.3 ,
        vector
    Exposed-Modules:
        Dhall.Yaml
        Dhall.YamlToDhall
    GHC-Options: -Wall

Executable dhall-to-yaml-ng
    Hs-Source-Dirs: dhall-to-yaml-ng
    Main-Is: Main.hs
    Build-Depends:
        base      ,
        dhall-json,
        dhall-yaml
    Other-Modules:
        Paths_dhall_yaml
    GHC-Options: -Wall

Executable yaml-to-dhall
    Hs-Source-Dirs: yaml-to-dhall
    Main-Is: Main.hs
    Build-Depends:
        base                                             ,
        aeson                                            ,
        ansi-terminal               >= 0.6.3.1  && < 0.11,
        bytestring                                 < 0.11,
        dhall                                            ,
        dhall-json                                       ,
        dhall-yaml                                       ,
        exceptions                  >= 0.8.3    && < 0.11,
        optparse-applicative                             ,
        prettyprinter                                    ,
        prettyprinter-ansi-terminal >= 1.1.1    && < 1.2 ,
        text                                       < 1.3
    if !impl(ghc >= 8.0) && !impl(eta >= 0.8.4)
      Build-Depends: semigroups == 0.18.*
    Other-Modules:
        Paths_dhall_yaml
    GHC-Options: -Wall

Test-Suite tasty
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tasty
    Main-Is: Main.hs
    Build-Depends:
        base                                    ,
        bytestring                              ,
        dhall                                   ,
        dhall-json                              ,
        dhall-yaml                              ,
        tasty                             <  1.3,
        tasty-expected-failure            < 0.12,
        text                                    ,
        tasty-hunit            >= 0.2
    GHC-Options: -Wall
